...
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back">

            <EditText
                android:id="@+id/edt_query"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                android:autofillHints="@string/search_hint"
                android:background="@color/background"
                android:hint="@string/search_hint"
...
